WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
49477
[Chromium] fast/canvas/canvas-arc-360-winding.html fails on Linux and Windows
https://bugs.webkit.org/show_bug.cgi?id=49477
Summary
[Chromium] fast/canvas/canvas-arc-360-winding.html fails on Linux and Windows
Mihai Parparita
Reported
2010-11-12 13:56:25 PST
See:
http://test-results.appspot.com/dashboards/flakiness_dashboard.html#master=ChromiumWebkit&tests=canvas-arc-360-winding.html&showExpectations=true
Diff: @@ -4,13 +4,13 @@ PASS data[0] is 0 -PASS data[1] is 0 +FAIL data[1] should be 0. Was 255. PASS data[2] is 0 PASS data[0] is 0 PASS data[1] is 255 PASS data[2] is 0 PASS data[0] is 0 -PASS data[1] is 0 +FAIL data[1] should be 0. Was 255. PASS data[2] is 0 PASS successfullyParsed is true
Attachments
respect anticlockwise in Path::addArc()
(1.34 KB, patch)
2011-03-04 06:21 PST
,
Mike Reed
no flags
Details
Formatted Diff
Diff
Patch
(2.66 KB, patch)
2011-03-04 10:08 PST
,
Mike Reed
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Mihai Parparita
Comment 1
2010-11-12 13:57:31 PST
Forgot a link to the revision that added the test:
http://trac.webkit.org/changeset/71936
James Robinson
Comment 2
2010-11-12 13:59:23 PST
We just render a big green rectangle on this in Skia instead of concentric circles.
Steven Brudenell
Comment 3
2011-03-03 17:20:34 PST
any action here? as a developer i describe this bug as "chrome can't draw a torus shape with ctx.arc(), while firefox/ie9 can". this "testcase fails" description would indicate something's off by a pixel or philosophically wrong in an obscure case, but this is a bad bug! a common-case-is-visibly-cattywampus bug! i claim the root cause is in WebCore/platform/graphics/skia/PathSkia.cpp -- Path::addArc just adds an oval if sweepDegrees covers a whole circle. it disregards anticlockwise and the sign of sweepDegrees in this case.
James Robinson
Comment 4
2011-03-03 17:23:52 PST
http://trac.webkit.org/export/80302/trunk/LayoutTests/fast/canvas/canvas-arc-360-winding.html
Mike Reed
Comment 5
2011-03-04 06:21:02 PST
Created
attachment 84737
[details]
respect anticlockwise in Path::addArc()
Steven Brudenell
Comment 6
2011-03-04 06:32:39 PST
holy crap, that was the fastest response from any dev team i've ever seen. thanks :)
Andreas Kling
Comment 7
2011-03-04 06:40:28 PST
Comment on
attachment 84737
[details]
respect anticlockwise in Path::addArc() Looks sane, r=me
Mihai Parparita
Comment 8
2011-03-04 08:29:49 PST
Comment on
attachment 84737
[details]
respect anticlockwise in Path::addArc() View in context:
https://bugs.webkit.org/attachment.cgi?id=84737&action=review
> WebCore/ChangeLog:9 > + LayoutTests/fast/canvas/canvas-arc-360-winding.html
Shouldn't the TEXT entry for this in LayoutTests/platform/chromium/test_expectations.txt be removed, now that we expect it to pass?
Andreas Kling
Comment 9
2011-03-04 08:49:39 PST
(In reply to
comment #8
)
> (From update of
attachment 84737
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=84737&action=review
> > > WebCore/ChangeLog:9 > > + LayoutTests/fast/canvas/canvas-arc-360-winding.html > > Shouldn't the TEXT entry for this in LayoutTests/platform/chromium/test_expectations.txt be removed, now that we expect it to pass?
D'oh. Yes of course. @Mike: Please update the patch accordingly.
Mike Reed
Comment 10
2011-03-04 10:08:13 PST
Created
attachment 84773
[details]
Patch
Mike Reed
Comment 11
2011-03-04 10:09:01 PST
This time with the updated test_expectations.txt
WebKit Commit Bot
Comment 12
2011-03-04 20:58:54 PST
Comment on
attachment 84773
[details]
Patch Rejecting
attachment 84773
[details]
from commit-queue. Failed to run "['./Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '--bot-id=cr-jail-7', 'build-..." exit_code: 2 Last 500 characters of output: ....................................................................................................................................................................................................................... inspector ........... inspector/audits . inspector/audits/audits-panel-functional.html -> failed Exiting early after 1 failures. 12758 tests run. 299.28s total testing time 12757 test cases (99%) succeeded 1 test case (<1%) had incorrect layout 8 test cases (<1%) had stderr output Full output:
http://queues.webkit.org/results/8087853
James Robinson
Comment 13
2011-03-04 21:46:29 PST
Comment on
attachment 84773
[details]
Patch Flake
WebKit Commit Bot
Comment 14
2011-03-04 22:29:45 PST
The commit-queue encountered the following flaky tests while processing
attachment 84773
[details]
: inspector/audits/audits-panel-functional.html
bug 55776
(authors:
apavlov@chromium.org
,
pfeldman@chromium.org
, and
rniwa@webkit.org
) The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 15
2011-03-04 22:32:25 PST
Comment on
attachment 84773
[details]
Patch Clearing flags on attachment: 84773 Committed
r80409
: <
http://trac.webkit.org/changeset/80409
>
WebKit Commit Bot
Comment 16
2011-03-04 22:32:31 PST
All reviewed patches have been landed. Closing bug.
Stephen White
Comment 17
2011-03-05 06:46:37 PST
Cool!
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug