2011-03-04  Mike Reed  <reed@google.com>

Reviewed by Mihai Parparita.

        [Chromium] fast/canvas/canvas-arc-360-winding.html fails on Linux and Windows
        https://bugs.webkit.org/show_bug.cgi?id=49477

        * platform/chromium/test_expectations.txt:
2011-03-04  Mike Reed  <reed@google.com>

        Reviewed by Mihai Parparita.

        [Chromium] fast/canvas/canvas-arc-360-winding.html fails on Linux and Windows
        https://bugs.webkit.org/show_bug.cgi?id=49477

        * platform/graphics/skia/PathSkia.cpp:
        (WebCore::Path::addArc):

Canonical link: https://commits.webkit.org/70303@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@80409 268f45cc-cd09-0410-ab3c-d52691b4dbfc